# cpp-project

./: .gitignore  CMakeLists.txt  README.md  TODO.md  Work.md  build.sh  client.py  openapi.yaml  run.sh  tmp.sh
.github/workflows/: ci.yml
aggregation-service/: .gitignore  CMakeLists.txt  Dockerfile  Issue.md  README.md  TODO.md  docker-compose.yml  init.sql
aggregation-service/include/: aggregation.grpc.pb.h  aggregation.pb.h  aggregation_server.h  aggregator.h  database.h  handlers.h  metrics.grpc.pb.h  metrics.pb.h  metrics_client.h
aggregation-service/proto/: metrics_service.proto
aggregation-service/scripts/: add_test_data.sh  test_periodic_run.sh
aggregation-service/src/: aggregation.grpc.pb.cc  aggregation_server.cpp  aggregator.cpp  database.cpp  handlers.cpp  main.cpp  metrics.pb.cc  metrics_client.cpp
aggregation-service/tests/: test_aggregation_grpc_server.cpp  test_aggregator.cpp  test_aggregator_unit.cpp  test_database.cpp  test_database_unit.cpp  test_grpc_connection.cpp
api-service/: .clang-format  CMakeLists.txt  Dockerfile  Issue.md  README.md  TODO.md  docker-compose.yml  openapi.yaml
api-service/include/: aggregation.grpc.pb.h  aggregation.pb.h  aggregation_client.hpp  handlers.hpp  models.hpp  monitoring_client.hpp  rabbitmq.hpp
api-service/scripts/: run_unit_tests.sh
api-service/src/: aggregation.grpc.pb.cc  aggregation.pb.cc  aggregation_client.cpp  handlers.cpp  main.cpp  models.cpp  monitoring_client.cpp  rabbitmq.cpp
api-service/tests/: test_handlers.py  test_handlers_unit.cpp  test_models_unit.cpp
metrics-service/: CMakeLists.txt  Dockerfile  Issue.md  README.md  TODO.md  build_and_test.sh  docker-compose.yml  init.sql
metrics-service/include/: database.h  http_handler.h  message_processor.h  metrics.h  metrics.pb.h  rabbitmq.h
metrics-service/scripts/: run_unit_tests.sh
metrics-service/src/: database.cpp  http_handler.cpp  main.cpp  message_processor.cpp  metrics.cpp  metrics.grpc.pb.cc  metrics.pb.cc  rabbitmq.cpp
metrics-service/tests/: CMakeLists.txt  test_database.cpp  test_database_unit.cpp  test_http_handler.cpp  test_message_processor.cpp  test_metrics_service.cpp  test_metrics_unit.cpp  test_utils.hpp
monitoring-service/: .gitignore  CMakeLists.txt  Dockerfile  Issue.md  README.md  TODO.md  docker-compose.yml
monitoring-service/include/: database.h  http_client.h  http_server.h  logging.h  monitor.h
monitoring-service/migrations/: 001_create_logs_table.sql
monitoring-service/src/: database.cpp  http_client.cpp  http_server.cpp  logging.cpp  main.cpp  monitor.cpp
monitoring-service/tests/: test_database.cpp  test_http_client.cpp  test_monitor.cpp  test_uptime.cpp
proto/: aggregation.proto  metrics.proto
